--- a/templates/index.html
+++ b/templates/index.html
@@ -51,9 +51,9 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="{% url 'home'%}" class="active">Home</a></li>
           <li><a href="{% url 'about'%}">About</a></li>
-          <li><a href="resume.html">Resume</a></li>
+          <li><a href="{% url 'resume'%}">Resume</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -99,7 +99,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8">
             <h2>Agnes Ongabi</h2>
-            <p>I'm a professional illustrator from San Francisco</p>
+            <p>I'm a professional Web Developer.</p>
             <a href="about.html" class="btn-get-started">About Me</a>
           </div>
         </div>
@@ -113,7 +113,7 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Kelly</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Agnes Ong'abi</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -126,7 +126,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href=“https://themewagon.com>ThemeWagon
+        Designed by <a href="https://bootstrapmade.com/">Agnes Ong'abi</a> Distributed by <a href=“https://themewagon.com>ThemeWagon
       </div>
     </div>
 
