--- a/templates/about.html
+++ b/templates/about.html
@@ -103,7 +103,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="{% static 'assets/img/profile-img.jpg'%}" class="img-fluid" alt="">
+            <img src="{% static 'assets/img/profile-img.jpeg'%}" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>UI/UX Designer &amp; Web Developer.</h2>
