--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-      <img src="{% static 'assets/img/hero-bg.jpg'%}" alt="" data-aos="fade-in">
+      <img src="{% static 'assets/img/hero-bg.jpeg'%}" alt="" data-aos="fade-in">
 
       <div class="container text-center" data-aos="zoom-out" data-aos-delay="100">
         <div class="row justify-content-center">
